--- a/boardapp/templates/board/board_detail.html
+++ b/boardapp/templates/board/board_detail.html
@@ -37,16 +37,18 @@
            </tr>
            <tr>
                <td colspan="4" valign="top" class="text-left" height="200">
-
+                  <pre style="white-space:pre-wrap;border:none;background-color:white">{{content}}</pre>
                </td>
            </tr>
+
            <tr>
                <td colspan="4" class="text-right">
-                   <a href="#" class="btn btn-sm btn-danger">수정</a>
-                   <a href="#" class="btn btn-sm btn-info">삭제</a>
+                   <a href="../update/?no={{no}}" class="btn btn-sm btn-danger">수정</a>
+                   <a href="../delete/?no={{no}}" class="btn btn-sm btn-info">삭제</a>
                    <a href="../?page=1" class="btn btn-sm btn-warning">목록</a>
                </td>
            </tr>
+
        </table>
    </div>
 </body>
